fixed Kurang margin pada waktu menu collapse

--- a/src/components/navigation/sidebar.scss
+++ b/src/components/navigation/sidebar.scss
@@ -5,7 +5,12 @@
   font-size: 14px;
   font-family: 'Segoe UI', sans-serif;
 }
-
+.bb-sidebar-nav {
+  margin-top: 1.2rem !important;
+}
+.bb-nav-link {
+  // margin-bottom: 0;
+}
 .sidebar .nav-item a > p > i.right {
   margin-top: 3px;
 }
@@ -67,7 +72,7 @@
   width: calc(250px - 0.5rem * 2);
 }
 .sidebar-mini .main-sidebar .nav-link {
-width: auto !important;
+// width: auto !important;
 }
 .nav-treeview > .nav-item {
   padding-left: 26px !important;
@@ -77,4 +82,17 @@ width: auto !important;
 }
 .nav-sidebar .nav-link > .right {
   right: 0.3rem !important;
+}
+
+.ic-right {
+  display: none;
+}
+
+.sidebar-collapse.sidebar-mini .main-sidebar.sidebar-focused .nav-link .ic-right, 
+.sidebar-collapse.sidebar-mini .main-sidebar:hover .nav-link .ic-right, 
+.sidebar-collapse.sidebar-mini-md .main-sidebar.sidebar-focused .nav-link .ic-right, 
+.sidebar-collapse.sidebar-mini-md .main-sidebar:hover .nav-link .ic-right, 
+.sidebar-collapse.sidebar-mini-xs .main-sidebar.sidebar-focused .nav-link .ic-right, 
+.sidebar-collapse.sidebar-mini-xs .main-sidebar:hover .nav-link .ic-right {
+  display: inline;
 }
